# northwestern-challenge

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
submission/fairguard-agentic-investigation-submission/: README.md  findings-report.md  pyproject.toml
submission/fairguard-agentic-investigation-submission/notes/: 08_external_verification_top_candidates.md  09_reportability_gates_207_and_comment.md
submission/fairguard-agentic-investigation-submission/skills/archive-on-cite/: SKILL.md
submission/fairguard-agentic-investigation-submission/skills/coi-graph/: SKILL.md
submission/fairguard-agentic-investigation-submission/skills/comment-tracker/: SKILL.md
submission/fairguard-agentic-investigation-submission/skills/doctor/: SKILL.md
submission/fairguard-agentic-investigation-submission/skills/entity-resolver/: SKILL.md
submission/fairguard-agentic-investigation-submission/skills/federal-award-tracer/: SKILL.md
submission/fairguard-agentic-investigation-submission/skills/lda-corpus-indexer/: SKILL.md
submission/fairguard-agentic-investigation-submission/skills/press-release-cross-ref/: SKILL.md
submission/fairguard-agentic-investigation-submission/tests/: test_agency_registry.py  test_ap_style_lint.py  test_archive_cite.py  test_coi_graph.py  test_comment_tracker.py  test_entity_resolver.py  test_pressrel.py
submission/fairguard-agentic-investigation-submission/tools/: 09_ap_style_lint.py
submission/fairguard-agentic-investigation-submission/traces/: README.md  trace-01-setup-and-data-exploration.md  trace-04-skill-index.md  trace-07-skill-trace.md  trace-09-skill-coi.md  trace-11-skill-archive.md  trace-raw-repro-scan-finding02.jsonl  trace-raw-repro-trace-moneytrail.jsonl
(+142 files in other folders)
